[gd_scene load_steps=6 format=3 uid="uid://1uke5wj3cffe"]

[ext_resource type="Script" path="res://HUD.gd" id="1_lfi3n"]
[ext_resource type="FontFile" uid="uid://cc1y4ohudor8c" path="res://fonts/Xolonium-Regular.ttf" id="2_byddc"]
[ext_resource type="Texture2D" uid="uid://2quw0f0np065" path="res://art/progress_black.png" id="3_0g7j4"]
[ext_resource type="Texture2D" uid="uid://cg0yn8e5linw7" path="res://art/progress_bar.png" id="4_gpi7m"]

[sub_resource type="Theme" id="Theme_abels"]
default_font_size = 42

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_lfi3n")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 195.0
offset_top = 38.0
offset_right = 256.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("2_byddc")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -86.0
offset_right = 88.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_byddc")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -150.0
offset_right = 441.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.554403, 1.48839)
theme_override_fonts/font = ExtResource("2_byddc")
theme_override_font_sizes/font_size = 24
text = "null"
autowrap_mode = 3

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 30.745

[node name="TimerLabel" type="Label" parent="."]
offset_left = 375.0
offset_top = 52.0
offset_right = 430.0
offset_bottom = 110.0
theme = SubResource("Theme_abels")
text = "0"

[node name="Label" type="Label" parent="TimerLabel"]
layout_mode = 0
offset_left = -119.0
offset_top = 14.0
offset_right = 151.0
offset_bottom = 72.0
text = "Time playing:"

[node name="summon_progress" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="summon_progress"]
offset_left = 16.0
offset_top = 23.0
offset_right = 191.0
offset_bottom = 123.0
texture = ExtResource("3_0g7j4")

[node name="TextureProgressBar" type="TextureProgressBar" parent="summon_progress"]
offset_left = 16.0
offset_top = 23.0
offset_right = 191.0
offset_bottom = 123.0
value = 50.0
texture_progress = ExtResource("4_gpi7m")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
